# robot_factory

./: CMakeLists.txt  ackermann_robot.sdf  ackermann_robot.xacro  ackermann_robot_test.urdf  diff_test.urdf  four_wheels.xacro  hokuyo.xacro  hokuyo_test.config  imu_lidar.sdf  package.xml  skid_steer_test.urdf
config/: ackermann.yaml  adaptive_filter_parameters.yaml  controller.yaml
launch/: ackermann_gazebo_citadel.launch  ackermann_robot.launch  ackermann_test.launch  corredor_500m.launch  hokuyo_xacro.launch  imu_lidar.launch  skid_steer.launch  skid_steer_mid360.launch
scripts/: odometry_saver.py  plot_odometry.py  plot_odometry_plane.py  plot_odometry_x_t.py  skid_steer_odometry.py  teleop_test.py  wheel_velocity_publisher.py
src/: EKFAdaptiveFilter.cpp  ackermann_drive_plugin.cpp  point_cloud_mapper.cpp
urdf/: ackermann_robot.sdf  ackermann_robot.urdf  ackermann_robot.xacro  gazebo.xacro  hokuyo_test.sdf  imu_lidar.xacro  skid_steer.xacro  skid_steer_mid360.xacro
worlds/: CASE.world  CASE_v2.world  L_test.world  corredor_500m.world  lab_test.world
