<package format="2">
  <name>robot_factory</name>
  <version>0.0.1</version>
  <description>Package to test different Gazebo versions and ROS Noetic to simulate different terrestrial robots.</description>
  <maintainer email="your.email@domain.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Dependências para ROS -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>ackermann_steering_controller</build_depend>
  
  <!-- Dependências de execução -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ackermann_steering_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>rviz</exec_depend>
	<exec_depend>xacro</exec_depend>
  
  <!-- Dependências do Ignition Gazebo -->
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>

</package>
